--- a/relay/Makefile.am
+++ b/relay/Makefile.am
@@ -2,11 +2,11 @@ AM_CPPFLAGS = -DLOCALSTATEDIR='"@localstatedir@"'
 
 sbin_PROGRAMS = dhcrelay
 dhcrelay_SOURCES = dhcrelay.c
-dhcrelay_LDADD = ../common/libdhcp.a ../omapip/libomapi.a \
-		 @BINDLIBIRSDIR@/libirs.a \
-		 @BINDLIBDNSDIR@/libdns.a \
-		 @BINDLIBISCCFGDIR@/libisccfg.a \
-		 @BINDLIBISCDIR@/libisc.a
+dhcrelay_LDADD = ../common/libdhcp.@A@ ../omapip/libomapi.@A@ \
+		 @BINDLIBIRSDIR@/libirs.@A@ \
+		 @BINDLIBDNSDIR@/libdns.@A@ \
+		 @BINDLIBISCCFGDIR@/libisccfg.@A@ \
+		 @BINDLIBISCDIR@/libisc.@A@
 man_MANS = dhcrelay.8
 EXTRA_DIST = $(man_MANS)
 
