--- a/common/Makefile.am.in
+++ b/common/Makefile.am.in
@@ -1,7 +1,7 @@
 AM_CPPFLAGS = -I$(top_srcdir) -DLOCALSTATEDIR='"@localstatedir@"'
 AM_CFLAGS = $(LDAP_CFLAGS)
 
-noinst_LIBRARIES = libdhcp.@A@
+lib_@DHLIBS@ = libdhcp.@A@
 libdhcp_@A@_SOURCES = alloc.c bpf.c comapi.c conflex.c ctrace.c dhcp4o6.c \
 		      discover.c dispatch.c dlpi.c dns.c ethernet.c execute.c \
 		      fddi.c icmp.c inet.c lpf.c memory.c nit.c ns_name.c \
